# pocket-architect

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  EXAMPLES.md  EXAMPLES.md.bak  LICENSE  Makefile  QUICK_DEMO.md  README.md  USAGE.md  USAGE_EXAMPLES.md  checkpoint.sh  down.sh  environment.yml  main.tf  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.bat  setup.sh  terraform.tfvars.example  test_aws_credentials.py  test_graceful_shutdown.py  up.sh  variables.tf  vite.config.ts
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
AWS Environment Management GUI/src/: App.tsx  README.md  bridge.ts  index.css  main.py  main_window.py  sidebar.py  styles.py  styles.qss
AWS Environment Management GUI/src/components/: Blueprints.tsx  CostManagement.tsx  Dashboard.tsx  Projects.tsx  Settings.tsx  Sidebar.tsx  Snapshots.tsx
AWS Environment Management GUI/src/contexts/: BridgeContext.tsx
AWS Environment Management GUI/src/pages/: blueprints.py  cost_management.py  dashboard.py  projects.py  (+2 more)
app/frontend/: index.html  package.json  vite.config.ts
config/: README.md  aws-credentials.env.enc  test-credentials.env
crypto/keys/: github-secrets-template.md
crypto/signing-keys/: README.md
docs/: ARCHITECTURE.md  AWS_TEST_CREDENTIALS.md  CI-CD.md  CODE_SIGNING.md  DOCUMENTATION_GUIDE.md  INSTALL.md  INSTALLATION_SUCCESS.md  LEGACY.md  README-WSL.md  README.md  SECURITY.md  STRUCTURE.md  TESTING.md  TESTING_SETUP.md  WSL-README.md
docs/.obsidian/: workspace.json
docs/agent/: IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_REVIEW.md  NEXT_STEPS.md  PLAN.md  PROGRESS.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_PLAN.md  STATUS.md  TEST_COVERAGE_REPORT.md
docs/project/: README.md  ROOT_ORGANIZATION.md  WORKTREE_NOTES.md
docs/setup/: KEY_SETUP.md
docs/welcome/: WELCOME_TO_TEAM.md
examples/: blueprint-aws-cvat.yaml  blueprint-local-cvat.yaml
keys/: github-secrets-template.md
legacy-infrastructure/: ARCHITECTURE.md  README.md  run_tests.sh
legacy-infrastructure/scripts/: README.md  check_test_coverage.py  checkpoint.sh  cvat.py  down.sh  quick_test.sh  requirements.txt  run_all_tests.sh  run_tests.py  setup.sh  setup_tests.sh  test_with_coverage.sh  up.sh
legacy-infrastructure/terraform/: main.tf
legacy-infrastructure/test_data/: README.md  sample_tfvars.txt
legacy-infrastructure/tests/: README.md  __init__.py  test_aws.py  test_aws_comprehensive.py  test_aws_has_existing_resources.py  test_aws_route53_comprehensive.py  test_checkpoint.py  test_cli_comprehensive.py  test_config.py  test_down.py  test_edge_cases.py  test_ensure_symlink_edge_cases.py  test_final_coverage_check.py  test_integration.py  test_package_init.py  test_setup.py  test_setup_comprehensive.py  test_terraform.py  test_terraform_args.py  test_up.py  test_utils.py  test_utils_comprehensive.py
mlcloud/: __init__.py  __main__.py  cli.py
mlcloud/backends/: terraform.py
mlcloud/commands/: auto_annotate.py  blueprint.py  cvat.py  destroy.py  list.py  shell.py  status.py  train.py
mlcloud/config/: __init__.py  profiles.py  settings.py
mlcloud/core/: __init__.py  blueprint.py  cost.py  session.py  state.py  types.py
mlcloud/models/: __init__.py  downloader.py  inference.py  registry.py
mlcloud/providers/: __init__.py  base.py
mlcloud/security/: __init__.py  sandbox.py
mlcloud/utils/: __init__.py  cost_estimator.py  docker.py  errors.py  ip_detection.py  keyring.py  rclone.py  rich_ui.py  sso.py  validation.py
pocket_architect/: __init__.py  __main__.py  cli.py  config.py  models.py  wizard.py
pocket_architect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pocket_architect/backends/: __init__.py
pocket_architect/blueprints/: __init__.py  builtin.py  loader.py
pocket_architect/commands/: __init__.py  auto_annotate.py  blueprint.py  cvat.py  destroy.py  list.py  shell.py  status.py  train.py
pocket_architect/config/: __init__.py  profiles.py  settings.py
pocket_architect/core/: __init__.py  blueprint.py  cost.py  session.py  state.py  types.py
pocket_architect/gui/: cli_bridge.py  react_bridge.py  web_bridge.py
pocket_architect/models/: downloader.py  inference.py  registry.py
pocket_architect/providers/: __init__.py  base.py
pocket_architect/security/: aws_roles.py  coreweave_rbac.py  runpod_scopes.py  sandbox.py
pocket_architect/state/: __init__.py  cost_tracker.py  manager.py  resource_tracker.py  snapshot_index.py
pocket_architect/utils/: __init__.py  cost_estimator.py  errors.py  keyring.py  rich_ui.py  sso.py  validation.py
scripts/: build.sh  clean.sh  decrypt-aws-creds.sh  dev.sh  encrypt-aws-creds.sh  setup-signing.bat  setup-signing.sh  setup-wsl.sh  validate-setup.js  welcome.sh
scripts/bash/: build-tauri.sh  rebuild.sh  setup-macos-code-signing.sh  setup-macos-signing.sh  setup-signing.sh  setup-updater-keys.sh  setup.sh  test-aws.sh  wsl-dev.sh
scripts/node/: validate-setup.js
scripts/powershell/: decrypt-aws-creds.bat  encrypt-aws-creds.bat  setup-signing.bat  setup-updater-keys.bat  setup-windows-code-signing.bat  setup-windows-signing.bat  setup.bat  setup.ps1
signing-keys/: README.md
src/: package-lock.json  package.json
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/aws/: adapters.rs  cache.rs  client.rs  config.rs  cost.rs  ec2.rs  errors.rs  events.rs  events_integration_tests.rs  events_tests.rs  health.rs  iam.rs  lambda.rs  mod.rs  rds.rs  s3.rs  tests.rs  types.rs
src-tauri/src/db/: accounts.rs
src-tauri/tests/: data_flow_tests.rs  integration_test.rs  live_data_test.rs
src/features/: Accounts.tsx
src/src/: App.css  App.jsx  App.test.jsx  UpdateManager.css  UpdateManager.jsx
tests/: README.md  TEST_COVERAGE.md  TEST_SUMMARY.md  __init__.py  conftest.py  requirements.txt  test_cli.py  test_local_provider.py
tests/integration/: __init__.py  test_aws_provider.py  test_local_provider.py
tests/unit/: __init__.py
(+207 files in other folders)
